<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukan_judul"/>

        <EditText android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_belanja"
            android:inputType="text"
            android:layout_marginBottom="8dp"/>

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masukan_jumlah_uang"/>

        <EditText
            android:id="@+id/uang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_1_000_000"
            android:inputType="number"
            android:layout_marginBottom="8dp"/>

        <CheckBox android:id="@+id/checkbox_masukan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/pemasukan"/>
    </LinearLayout>
</ScrollView>