<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_marginBottom="32dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_pengeluaran"
                    android:textColor="@android:color/white"
                    android:layout_marginStart="16dp"
                    android:gravity="left"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/jumlah_pengeluaran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_0"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_pemasukan"
                    android:textColor="@android:color/white"
                    android:gravity="left"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/jumlah_pemasukan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_0"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/layout"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/bt"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_scrollFlags="scroll|enterAlways"
                app:tabIndicatorColor="@android:color/white"
                app:tabSelectedTextColor="@android:color/white"
                app:tabTextColor="@android:color/darker_gray" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/histori_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1" />

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/riwayat_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="bottom|end"
        android:contentDescription="@string/todo" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
