<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_saldo"
        android:title="@string/saldo"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        />

    <item android:id="@+id/action_reset"
        android:title="@string/reset"
        android:icon="@drawable/ic_baseline_autorenew_24" />
</menu>
